# book2anki

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
book2anki/: __main__.py  anki_reader.py  cli.py  diagram_gen.py  envfile.py  generator.py  language.py  models.py  packager.py  parser_epub.py  parser_pdf.py  parser_web.py  parser_youtube.py  prompts.py  provider_claude.py  provider_cli.py  provider_openai.py
tests/: test_book_images.py  test_cli.py  test_generator.py  test_language.py  test_models.py  test_packager.py  test_parser_epub.py  test_parser_pdf.py  test_parser_web.py  test_parser_youtube.py  test_prompts.py  test_toc_grouping.py
